Create navbar and style it.

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body, html {
-    background-color: gray;
-}
-.OT_subscriber {
-    float: left;
-    margin-left: 1em;
-}
-.OT_publisher {
-    float: left;
-}
-.error {
-    color: red;
+/*body, html {*/
+/*    background-color: gray;*/
+/*}*/
+/*.OT_subscriber {*/
+/*    float: left;*/
+/*    margin-left: 1em;*/
+/*}*/
+/*.OT_publisher {*/
+/*    float: left;*/
+/*}*/
+/*.error {*/
+/*    color: red;*/
+/*}*/
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
