--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
     height: 100% !important;
 }
 
-.OT_bar,
-.OT_edge-bar-item {
-    visibility: hidden;
-}
+/*.OT_bar,*/
+/*.OT_edge-bar-item {*/
+/*    visibility: hidden;*/
+/*}*/
